move files and change load type for accessing them from jar-file